force-app/main/default/objects/Diagnostic__c/Diagnostic__c.object-meta.xml
<CustomObject>
    <description
  >The system generates a Diagnostic log, based on the specified Diagnostic log level every time that user executes a transaction. You can monitor and retain diagnositc logs.</description>
    <label>Diagnostic</label>
    <nameField>
        <displayFormat>D-{00000}</displayFormat>
        <label>Diagnostic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Diagnostics</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>