force-app/main/default/objects/Diagnostic__c/fields/ApplicationName__c.field-meta.xml
<CustomField>
    <fullName>ApplicationName__c</fullName>
    <description>Application name where log was generated</description>
    <inlineHelpText>Application name where log was generated</inlineHelpText>
    <label>Application Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>