force-app/main/default/objects/Diagnostic__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>Apex class name which Log was generated</description>
    <inlineHelpText>Apex class name which Log was generated</inlineHelpText>
    <label>Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>