force-app/main/default/objects/Diagnostic__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <description>Parent Object ID used for tracing purpose</description>
    <inlineHelpText>Parent Object ID used for tracing purpose</inlineHelpText>
    <label>Entity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>