force-app/main/default/objects/Diagnostic__c/fields/LogLevel__c.field-meta.xml
<CustomField>
    <fullName>LogLevel__c</fullName>
    <description>Indicates the level of log record</description>
    <inlineHelpText>Indicates the level of log record</inlineHelpText>
    <label>Log Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
                <default>true</default>
                <label>Error</label>
            </value>
            <value>
                <fullName>Debug</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>