force-app/main/default/objects/Diagnostic__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The details that were logged.</description>
    <inlineHelpText>The details that were logged.</inlineHelpText>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>