force-app/main/default/objects/Diagnostic__c/listViews/Error.listView-meta.xml
<ListView>
    <fullName>Error</fullName>
    <columns>NAME</columns>
    <columns>ApplicationName__c</columns>
    <columns>LogLevel__c</columns>
    <columns>Class__c</columns>
    <columns>Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Entity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LogLevel__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>Error</label>
</ListView>